# gen-statemachine

./: .env  .gitignore  Makefile  README.md  pyproject.toml
examples/: fsm_model.puml  full_syntax.puml  hello_world.puml  test.puml  test_nested_entry_exit.puml  washing_machine.puml
gen_fsm/: diag.py  error.py  main.py
gen_fsm/backend/: __init__.py  mako_renderer.py  manifest.py  target_generator.py
gen_fsm/frontend/: __init__.py  grammar.ebnf  lexer.py  parse_tree.py  parser.py  tokens.py
gen_fsm/model/: __init__.py  builder.py  model.puml
gen_fsm/plugins/: default.py
gen_statemachine/: diag.py  error.py  main.py  parse_args.py  program.py
gen_statemachine/backend/: mako_renderer.py  manifest.py  target_generator.py
gen_statemachine/frontend/: __init__.py  grammar.ebnf  lexer.py  parse_tree.py  parser.py  tokens.py
gen_statemachine/model/: __init__.py  builder.py  factory.py  model.puml  model.py
gen_statemachine/plugins/: default.py
tests/: test_gen_statemachine.py  utilities.py
tests/end_to_end/: __init__.py  test_case.py  test_gen_statemachine.py  test_region_entry_exit.py  test_x_region_entry_exit.py
tests/end_to_end/diagrams/: test_region_entry_exit.puml  test_x_region_entry_exit.puml
tests/end_to_end/tests/: T1_pass_through.test  T2_composite_pass_through.test  T3_nested_entry_exit.test  T4_cross_region_entry_exit.test  T5_event_pass_through.test  T6_event_actions.test
tests/integration/: frontend_harness.py
tests/unit_tests/frontend/: test_file_reader.py  test_lexer.py  test_parser.py
tests/unit_tests/model/: test_builder.py  (+1 more)
(+7 files in other folders)
