[tool.poetry]
name = "gen-fsm"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Mako = "^1.1.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.6b0"
mypy = "^0.902"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
